@startuml
'https://plantuml.com/class-diagram

class EliteEnemy{
    + update(List<AbstractAircraft>,LIst<BaseBullet):void
}

class BossEnemy{
    + update(List<AbstractAircraft>,LIst<BaseBullet):void
}

class MobEnemy{
    + update(List<AbstractAircraft>,LIst<BaseBullet):void
}

class EnemyBullet{
    + update(List<AbstractAircraft>,LIst<BaseBullet):void
}

interface EnemyObserver{
        + update(List<AbstractAircraft>,LIst<BaseBullet):void
}

class AbstractGame{
    # crashCheckAction():void
}

class BoomProp{
    + boom(List<AbstractAircraft>,List<BaseBullet>):void
}

EnemyObserver <|.. EliteEnemy
EnemyObserver <|.. EnemyBullet
EnemyObserver <|.. BossEnemy
EnemyObserver <|.. MobEnemy

EnemyObserver <--o BoomProp

BoomProp <-- AbstractGame

@enduml